# mic2e-inference

./: .gitignore  BOXDIFF_USAGE.md  CONFIGURATION.md  DOCKER_SETUP.md  Dockerfile  GLIGEN_USAGE.md  IMPLEMENTATION_SUMMARY.md  MODELS_SETUP.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_COMPARISON.md  SD_INPAINT_USAGE.md  load.py  pyproject.toml
.github/workflows/: deploy.yml
app/: env.py  lifespan.py  main.py
app/config/: optimization_config.py
app/dependencies/: box_diff_dependencies.py  flux_dependencies.py  gligen_dependencies.py  object_clear_dependencies.py  sam3_dependencies.py  sd_inpaint_dependencies.py
app/models/: README.md  __init__.py  box_diff_loader.py  flux_loader.py  gligen_loader.py  object_clear_loader.py  sam3_loader.py  sd_inpaint_loader.py
app/routes/: box_diff_routes.py  flux_routes.py  gligen_routes.py  health_routes.py  object_clear_routes.py  sam3_routes.py  sd_inpaint_routes.py
app/schemas/: common_schemas.py
app/services/: box_diff_service.py  flux_service.py  gligen_service.py  object_clear_service.py  sam3_service.py  sd_inpaint_service.py
app/services/impl/: box_diff_service_impl.py  flux_service_impl.py  gligen_service_impl.py  object_clear_service_impl.py  sam3_service_impl.py  sd_inpaint_service_impl.py
app/utils/: checkpoint_downloader.py  device_utils.py  image_utils.py  model_loaders.py  model_manager.py
